completed get and delete apis
