# src/ExamPortal.API/Controllers/QuestionApi.cs
@@ -43,7 +43,6 @@ namespace ExamPortal.API.Controllers
         [Consumes("application/json")]
         [ValidateModelState]
         [SwaggerOperation("AddQuestion")]
-        [SwaggerResponse(statusCode: 201, type: typeof(Question), description: "Question created")]
         [SwaggerResponse(statusCode: 400, type: typeof(Error), description: "Invalid input")]
         [SwaggerResponse(statusCode: 422, type: typeof(Error), description: "Validation exception")]
         [SwaggerResponse(statusCode: 0, type: typeof(Error), description: "Unexpected error")]
@@ -110,7 +109,6 @@ namespace ExamPortal.API.Controllers
         [Consumes("application/json")]
         [ValidateModelState]
         [SwaggerOperation("UpdateQuestion")]
-        [SwaggerResponse(statusCode: 200, type: typeof(Question), description: "Question updated")]
         [SwaggerResponse(statusCode: 400, type: typeof(Error), description: "Invalid ID supplied")]
         [SwaggerResponse(statusCode: 404, type: typeof(Error), description: "Question not found")]
         [SwaggerResponse(statusCode: 422, type: typeof(Error), description: "Validation exception")]
