# src/ExamPortal.API/Controllers/QuestionOptionApi.cs
@@ -43,7 +43,6 @@ namespace ExamPortal.API.Controllers
         [Consumes("application/json")]
         [ValidateModelState]
         [SwaggerOperation("AddQuestionOption")]
-        [SwaggerResponse(statusCode: 201, type: typeof(QuestionOption), description: "Question option created")]
         [SwaggerResponse(statusCode: 400, type: typeof(Error), description: "Invalid input")]
         [SwaggerResponse(statusCode: 422, type: typeof(Error), description: "Validation exception")]
         [SwaggerResponse(statusCode: 0, type: typeof(Error), description: "Unexpected error")]
@@ -110,7 +109,6 @@ namespace ExamPortal.API.Controllers
         [Consumes("application/json")]
         [ValidateModelState]
         [SwaggerOperation("UpdateQuestionOption")]
-        [SwaggerResponse(statusCode: 200, type: typeof(QuestionOption), description: "Question option updated")]
         [SwaggerResponse(statusCode: 400, type: typeof(Error), description: "Invalid ID supplied")]
         [SwaggerResponse(statusCode: 404, type: typeof(Error), description: "Question option not found")]
         [SwaggerResponse(statusCode: 422, type: typeof(Error), description: "Validation exception")]
